# CppTrader

./: .gitlinks  CMakeLists.txt
app/: itch_handler.cpp  matching_engine.cpp
app/common/: safe_itch_handler.h  safe_market_manager.h  validator.h
app/fuzzing/: itch_fuzzer.cpp
blog/: blog_post_1.md  blog_post_2.md  blog_post_3.md  blog_post_4.md
documents/: Doxyfile
include/secure/: safe_itch_handler.h  validator.h
include/trader/: version.h
